[gd_scene load_steps=6 format=3 uid="uid://b4gdgsg630a8m"]

[ext_resource type="Script" path="res://Menu/Game_Menus/main_menu.gd" id="1_x03mb"]
[ext_resource type="PackedScene" uid="uid://bhdjj7pymql4e" path="res://Components/volume_config.tscn" id="2_jxaqi"]
[ext_resource type="PackedScene" uid="uid://cjjkaapbpjcvq" path="res://Components/sensitivity_config.tscn" id="3_ogny1"]
[ext_resource type="AudioStream" uid="uid://vfi7xn3k6fhn" path="res://Assets/Audio/button_click.sfxr" id="4_8058b"]
[ext_resource type="AudioStream" uid="uid://cjwvku8michd0" path="res://Assets/Audio/(Soft Loop For Dialogues, Pause or Other Things) 9.ogg" id="5_mwtsy"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x03mb")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="main_menu" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -50.5
offset_right = 125.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="start_button" type="Button" parent="Panel/main_menu"]
layout_mode = 2
focus_neighbor_top = NodePath("../quit_button")
focus_neighbor_bottom = NodePath("../options_button")
text = "Start Game"

[node name="options_button" type="Button" parent="Panel/main_menu"]
layout_mode = 2
focus_neighbor_top = NodePath("../start_button")
focus_neighbor_bottom = NodePath("../quit_button")
text = "Options"

[node name="quit_button" type="Button" parent="Panel/main_menu"]
layout_mode = 2
focus_neighbor_top = NodePath("../options_button")
focus_neighbor_bottom = NodePath("../start_button")
text = "Quit Game"

[node name="settings_menu" type="VBoxContainer" parent="Panel"]
visible = false
custom_minimum_size = Vector2(250, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -39.0
offset_right = 29.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2

[node name="volume_label" type="Label" parent="Panel/settings_menu"]
layout_mode = 2
text = "Volume
"

[node name="volume_slider" type="HSlider" parent="Panel/settings_menu"]
layout_mode = 2
max_value = 1.0
step = 0.1
value = 1.0

[node name="sens_label" type="Label" parent="Panel/settings_menu"]
layout_mode = 2
text = "Sensitivity"

[node name="sens_slider" type="HSlider" parent="Panel/settings_menu"]
layout_mode = 2
max_value = 3.0
step = 0.2
value = 0.6

[node name="back_button" type="Button" parent="Panel/settings_menu"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_8058b")

[node name="Menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mwtsy")
autoplay = true

[node name="VolumeConfig" parent="." instance=ExtResource("2_jxaqi")]

[node name="SensitivityConfig" parent="." instance=ExtResource("3_ogny1")]

[connection signal="pressed" from="Panel/main_menu/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Panel/main_menu/options_button" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Panel/main_menu/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="value_changed" from="Panel/settings_menu/volume_slider" to="." method="_on_volume_slider_value_changed"]
[connection signal="value_changed" from="Panel/settings_menu/sens_slider" to="." method="_on_sens_slider_value_changed"]
[connection signal="pressed" from="Panel/settings_menu/back_button" to="." method="_on_back_button_pressed"]
